@@ -1,3 +1,7 @@
+2022-11-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/spdl.h: Use variadic templates to fmt::format
+
 2022-11-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Version 0.0.9
